tf-INF/development/services/6.harbor-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: harbor-gateway
  namespace: bootstrap
  annotations:
    external-dns: enable
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http-harbor-80
      protocol: HTTP
    hosts:
    - "harbor.eks.dev.new-ses.ryte.tech"
    tls:
      httpsRedirect: true #fas   sends 301 redirect for http requests
  - port:
      number: 443
      name: http-harbor-443
      protocol: HTTP
    hosts:
    - "harbor.eks.dev.new-ses.ryte.tech"
---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: harbor-http-portal
#   namespace: bootstrap
# spec:
#   hosts:
#   - "harbor.eks.dev.new-ses.ryte.tech"
#   gateways:
#   - bootstrap/harbor-gateway
#   http:
#     - name: "core"
#       match:
#       - uri:
#           prefix: "/api/"
#       - uri:
#           prefix: "/service/"
#       - uri:
#           prefix: "/chartrepo/"
#       - uri:
#           prefix: "/c/"
#       route:
#       - destination:
#           host: harbor-harbor-core.bootstrap.svc.cluster.local
#           port:
#             number: 80
#       timeout: 30s
#     - name: "registry"
#       match:
#        - uri:
#           prefix: "/v2/"
#        - uri:
#           prefix: "/v1/"
#       route:
#       - destination:
#           host: harbor-harbor-registry.bootstrap.svc.cluster.local
#           port:
#             number: 5000
#     # - name: "chartrepo"
#     #   match:
#     #    - uri:
#     #       prefix: "/api/chartrepo/charts"
#     #   route:
#     #   - destination:
#     #       host: harbor-harbor-chartmuseum.bootstrap.svc.cluster.local
#     #       port:
#     #         number: 80
#     - name: "portal"
#       route:
#       - destination:
#           host: harbor-harbor-portal.bootstrap.svc.cluster.local
#           port:
#             number: 80

---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: harbor-vs
#   namespace: bootstrap
# spec:
#   hosts:
#   - "harbor.eks.dev.new-ses.ryte.tech"
#   gateways:
#   - harbor-gateway
#   http:
#     - match:
#         - uri:
#             prefix: '/c/'
#       route:
#         - destination:
#             host: harbor-core.bootstrap.svc.cluster.local
#     - match:
#         - uri:
#             prefix: '/api/'
#       route:
#         - destination:
#             host: harbor-core.bootstrap.svc.cluster.local
#     - match:
#         - uri:
#             prefix: '/v2/'
#       route:
#         - destination:
#             host: harbor-registry.bootstrap.svc.cluster.local
#             port:
#               number: 5000
#     - match:
#         - uri:
#             prefix: '/v1/'
#       route:
#         - destination:
#             host: harbor-registry.bootstrap.svc.cluster.local
#             port:
#               number: 5000
#       fault:
#         abort:
#           httpStatus: 404
#     - match:
#         - uri:
#             prefix: '/service/'
#       route:
#         - destination:
#             host: harbor-core.bootstrap.svc.cluster.local
#     - match:
#         - uri:
#             prefix: '/chartrepo/'
#       route:
#         - destination:
#             host: harbor-core.bootstrap.svc.cluster.local
#     - route:
#         - destination:
#             host: harbor-portal.bootstrap.svc.cluster.local
#
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: harbor-core
#   namespace: bootstrap
# spec:
#   hosts:
#     - harbor-core
#     - harbor-core.bootstrap.svc.cluster.local
#   http:
#     - match:
#         - uri:
#             prefix: '/v2/'
#       route:
#         - destination:
#             host: harbor-registry.bootstrap.svc.cluster.local
#             port:
#               number: 5000
#     - route:
#         - destination:
#             host: harbor-core.bootstrap.svc.cluster.local
---
#from github issues: https://github.com/goharbor/harbor-helm/issues/77
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-harbor-vs
  namespace: bootstrap
spec:
  hosts:
  - "harbor.eks.dev.new-ses.ryte.tech"
  gateways:
  - harbor-gateway
  http:
  - match:
    - uri:
        prefix: /api/
    rewrite:
      uri: /api/
    route:
    - destination:
        host: harbor.bootstrap.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /service/
    rewrite:
      uri: /service/
    route:
    - destination:
        host: harbor.bootstrap.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /v2/
    rewrite:
      uri: /v2/
    route:
    - destination:
        host: harbor.bootstrap.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /chartrepo/
    rewrite:
      uri: /chartrepo/
    route:
    - destination:
        host: harbor.bootstrap.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /c/
    rewrite:
      uri: /c/
    route:
    - destination:
        host: harbor.bootstrap.svc.cluster.local
        port:
          number: 80

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: portal-gateway
  namespace: bootstrap
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: http-portal-443
      protocol: HTTP
    hosts:
    - "harbor.eks.dev.new-ses.ryte.tech"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-portal-vs
  namespace: bootstrap
spec:
  hosts:
  - "harbor.eks.dev.new-ses.ryte.tech"
  gateways:
  - portal-gateway
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        host: harbor-portal.bootstrap.svc.cluster.local
        port:
          number: 80
